Fix majors not showing and some funny css with the images on job card modals.

--- a/app/modules/SharedComponents/styles/StudentProfileModal.css
+++ b/app/modules/SharedComponents/styles/StudentProfileModal.css
@@ -22,7 +22,7 @@
 } 
 
 .stProfileImageContainer{
-    width: 232px;
+        min-width: 106px;
 } 
 
 .stProfileImageContainer img {
